fixed cell spacing

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
 #rCell {
     position: relative;
 }
+.divcell {
+    font-size: 0px;
+}
